--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+:root{
+
+  --background-light : #fff;
+  --text-light: #212529;
+  --badge-bg-light: #f7f8f9;
+  --skills-bg-light: #0563bb;
+  --theme-toggle-light: #212529;
+
+  --background-dark : #212529;
+  --text-dark: #d9dfe4;
+  --badge-bg-dark: #343a40;
+  --skills-bg-dark: #00adef;
+  --theme-toggle-dark: #d9dfe4;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media(prefers-color-scheme:dark){
+  :root {
+    --text: var(--text-dark);
+    --background: var(--background-dark);
+    --badge-bg: var(--badge-bg-dark);
+    --skills-bg: var(--skills-bg-dark);
+    --theme: var(--theme-toggle-dark);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media(prefers-color-scheme:light){
+  :root {
+    --text: var(--text-light);
+    --background: var(--text-light);
+    --badge-bg: var(--badge-bg-light);
+    --skills-bg: var(--skills-bg-light);
+    --theme: var(--theme-toggle-light);
+  }
 }
 
-.App-link {
-  color: #61dafb;
+[data-color-scheme= "light"]{
+  --text: var(--text-light);
+  --background: var(--background-light);
+  --badge-bg: var(--badge-bg-light);
+  --skills-bg: var(--skills-bg-light);
+  --theme: var(--theme-toggle-light);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+[data-color-scheme= "dark"]{
+    --text: var(--text-dark);
+    --background: var(--background-dark);
+    --badge-bg: var(--badge-bg-dark);
+    --skills-bg: var(--skills-bg-dark);
+    --theme: var(--theme-toggle-dark);
+}
+
+/* Utility classes */
+.text {
+  color: var(--text);
+}
+.background {
+  background-color: var(--background);
 }
